[package]
name = "ring_queue"
description = """
A double-ended queue implemented using a vector that reuses space after
elements are removed.
"""
version = "0.2.0"
authors = ["Miguel Molina <miguel@erizocosmi.co>"]
categories = ["data-structures"]
documentation = "https://docs.rs/ring_queue"
homepage = "https://github.com/erizocosmico/ring_queue"
repository = "https://github.com/erizocosmico/ring_queue"
license = "MIT"
readme = "README.md"
keywords = ["double-ended-queue", "queue", "circular", "deque", "ring"]

[badges]
travis-ci = { repository = "erizocosmico/ring_queue" }

[dependencies]
